# maholobiobench

./: AGENTS.md  README.md  pyproject.toml
configs/: asset_registry.yaml  episode_output_schema.yaml  protocol_state_schema.yaml  task_registry.yaml
docs/: ASSET_INVENTORY_M0.md  BENCHMARK_QA_NOTES.md  PHASE_B_SPEC.md  RESEARCH_PROPOSAL.md  TASK_TREE.md
examples/: list_phase_b_tasks.py
presentation/: baseline.html  env_assets.html  index.html  research_direction_summary.html  research_introduction_legacy.html  tasks.html
presentation/assets/: site_header.css  site_i18n.js
presentation/assets/data/: research_direction_translations.js
presentation/assets/i18n/: assets.js  baseline.js  common.js  index.js  tasks.js
presentation/assets/models/arenas/: ChipBOXRack_200ul.stl  ChipBOX_200μl.stl  SinglePipetteRack_4.stl  SinglePipetteRack_5.stl  Storage_15ml-6.stl  Storage_50mlx6.stl  Workshop_15mlx5.stl  Workshop_50mlx3.stl
presentation/assets/models/arenas/SinglePipetteRack_4/: SinglePipetteRack_4.stl
presentation/assets/models/arenas/maholo_arena/: Centrifuge_tool.stl  Chip_off.stl  Opener.stl  PCR_PlateMainRack_withCooling.stl  Pipette_Push.stl  Safety_fence_frame.stl  base_centrifuge.stl  base_deep_freezer.stl  base_robot.stl  table_main.stl  table_side_R1_FF.stl  table_side_R2.stl
presentation/assets/scripts/: site_i18n.js
presentation/assets/styles/: page_rail.css
scripts/: sync_assets_from_robosuite.py  sync_tasks_from_robosuite.py  validate_configs.py
src/maholobiobench/: __init__.py  paths.py  registry.py  validation.py
(+20 files in other folders)
