[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maholobiobench"
version = "0.1.0"
description = "Protocol-aware benchmark contracts for bio-laboratory robot manipulation in a Maholo digital twin."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
maholobiobench-validate = "maholobiobench.validation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maholobiobench = []

